# ds-prep-course-2024

./: .gitignore  LINUX.md  README.md  WINDOWS.md  github.md  macOS.md  python-venv.md  requirements.txt  slack.md  troubleshooting.md  weekly-workflow.md
Week 00/SLU00 - Jupyter Notebook/: Exercise notebook.ipynb  Learning notebook.ipynb
Week 01/SLU01 - Command Line/: Exercise notebook guide.ipynb  Exercise notebook.ipynb  Learning notebook.ipynb  README.md  Solutions notebook guide.ipynb  Solutions notebook.ipynb  utils.py
Week 01/SLU02 - Programming Basics/: Exercise notebook.ipynb  Learning Notebook 1.ipynb  Learning Notebook 2.ipynb  README.md  Solutions notebook.ipynb  utils.py
Week 02/SLU03 - Git Basics/: Exercise notebook.ipynb  Learning notebook.ipynb  README.md  Solutions notebook.ipynb
Week 02/SLU04 - Data Structures/: Exercise notebook 1.ipynb  Exercise notebook 2.ipynb  Extra notebook.ipynb  Learning notebook 1.ipynb  Learning notebook 2.ipynb  README.md  Solutions notebook 1.ipynb  Solutions notebook 2.ipynb
Week 03/SLU05 - Flow Control/: Exercise notebook 0.ipynb  Exercise notebook 1.ipynb  Exercise notebook 2.ipynb  README.md  (+8 more)
Week 09/SLU16 - Final Project/minesweeper_game_project/: .gitignore  README.md  pyproject.toml
Week 09/SLU16 - Final Project/minesweeper_game_project/minesweeper_game/: constants.py  main.py  mines.py  mines_solution.py  pygame_utils.py
Week 09/SLU16 - Final Project/minesweeper_game_project/tests/: tests.py
guides/: Windows_Subsystem_for_Linux_Installation_Guide_for_Windows_10.md  using_os_gui_to_manage_directories.md
(+70 files in other folders)
